# qtscreenshot

./: .gitignore  CMakeLists.txt  README.md  animatedwidget.h  capture.cpp  capture.h  configmanager.cpp  configmanager.h  galleryview.cpp  galleryview.h  imagelist.cpp  main.cpp  overlay.cpp  overlay.h  screenshot.cpp  screenshot.h  settings.ui  toast.cpp
src/: absolutelayout.cpp  absolutelayout.h  animatedwidget.cpp  capture.cpp  commonresources.qrc  galleryview.cpp  imagelayer.cpp  imagelayer.h  imagelist.h  imageview.cpp  imageview.h  main.cpp  marker.cpp  marker.h  ocr.cpp  ocr.h  overlay.cpp  overlay.h  screenshot.cpp  screenshot.h  settings.cpp  settings.ui  sheet.cpp  sheet.h  titlebar.cpp  titlebar.h  toast.h  util.cpp  util.h
src/imageeditor/: imageeditor.cpp  imageeditor.h
